--- a/01sass/exercises/solutions.scss
+++ b/01sass/exercises/solutions.scss
@@ -25,7 +25,7 @@ $border-color: #ccc;
 
 // Usa uma divisão para definir o tamanho 
 html {
-  font-size: (5 / 10) * 1em;
+  font-size: (5 / 10) * 1em; // 1/2em 1em/2em
 }
   
 
